fix issue that causes the settings menu to overlap the content on 7

--- a/css/7.css
+++ b/css/7.css
@@ -258,10 +258,11 @@
 	}
 
 #app-content {
-	z-index: 5000;
+	z-index: 25;
 }
 
 #app-settings,
 #expanddiv {
-	z-index: 2000;
+	z-index: 6000;
 }
+
